crates/reap-durable-writer/tests/ui/durable_receipt_is_move_only.rs
use reap_durable_writer::DurableReceipt;

fn replay(receipt: DurableReceipt) {
    let _first = receipt.clone();
    let _second = receipt;
}

fn main() {}
